# VerifyResources

./: locate-resources.py  pyproject.toml
