[project]
name = "locate-resources"
version = "0.1.0"
description = "Minecraft resource verifier and downloader"
authors = [{name = "KillaMeep"}]
dependencies = [
    "textual>=0.70.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "rich>=13.7.0"
]
requires-python = ">=3.8"

[project.scripts]

locate-resources = "locate_resources:main"
